ncmpc 0.42 - not yet released
* library page: repaint after moving cursor with mouse
* fix assertion failure on exit

ncmpc 0.41 - (2020-10-16)
* new main loop (copying code from MPD, replacing boost::asio)
* library page: fix crash bug
* lyrics: remove the "lyricwiki" plugin because the site is gone

ncmpc 0.40 - (2020-10-07)
* fix crash when range selection includes ".."
* fix another crash with a very narrow terminal window
* another jumping cursor fix for large scroll-offset values
* show elapsed time of streams

ncmpc 0.39 - (2020-08-21)
* library page: skip tags when there is only one value
* fix jumping cursor with large scroll-offset values
* key bindigs page: fix crash bug
* key bindigs page: eliminate bogus message "Did you forget to Apply your changes?"

ncmpc 0.38 - (2020-04-30)
* add option "timedisplay-type=none" to hide current song time
* fix use-after-free bug
* fix crash after entering empty password

ncmpc 0.37 - (2020-01-24)
* show performer on song page
* show partitions on outputs page (requires libmpdclient 2.18)
* search: add search tag "modified" (requires libmpdclient 2.10)
* fix compatibility with MPD versions older than 0.21
* switch to C++17

ncmpc 0.36 - (2019-11-05)
* screen_keydef: show "Add new key" only if there is room for more keys
* support the Alt modifier in hotkeys
* reduce network transfer

ncmpc 0.35 - (2019-09-14)
* fall back to "AlbumArtist" tag in the default format
* fix crash with a very narrow terminal window
* config: allow escaping single quote with backslash in key bindings
* config: fix bug with deprecated names in "screen-list" setting

ncmpc 0.34 - (2019-04-10)
* show total duration of range selection in status bar
* fix high CPU usage in key bindings check
* fix high CPU usage during text input
* fix background color "none"
* adapt to Boost 1.70.0 API changes
* fixed manual install dir

ncmpc 0.33 - (2018-10-22)
* artist page: rename to "library"
* library page: make tag list configurable