@@ -1,5 +1,6 @@
 ncmpc 0.42 - not yet released
 * library page: repaint after moving cursor with mouse
+* suppor the mouse wheel
 * fix assertion failure on exit
 
 ncmpc 0.41 - (2020-10-16)
